@@ -5,12 +5,18 @@
 #include <locale>
 #include <iostream>
 
+#ifdef SYNC_STDIO
+# define UNSYNC_STDIO
+# else
+# define UNSYNC_STDIO std::ios::sync_with_stdio(false);std::cin.tie(0);
+#  endif
+
 #define MAIN_DECL int MAINDECL main(int argc, char *argv[])
 
 #ifdef _MSC_VER
 #define MAINDECL __cdecl
 
-#define MAIN_BEGIN MAIN_DECL { MainGuard _mg;
+#define MAIN_BEGIN MAIN_DECL { MainGuard _mg;   UNSYNC_STDIO;
 
 #define MAIN_END }
 
@@ -32,7 +38,7 @@ struct MainGuard {
 };
 #else
 #define MAINDECL
-#define MAIN_BEGIN MAIN_DECL {
+#define MAIN_BEGIN MAIN_DECL {  UNSYNC_STDIO;
 
 #define MAIN_END }
 
